--- a/news.txt
+++ b/news.txt
@@ -2,10 +2,13 @@
 Please add new items on the top, comment older/irrelevant items out
 ////
 
+*August 22-23 2009*::
+	http://froscon.org/[FrOSCon] was a big success, a lot of people where interested in Lumiera!
+
 *June 19-20 2009*::
 	The Lumiera community is in New York at the http://openvideoconference.org/[Open Video Conference]. Tom gives a presentation about Lumiera and our goals. Awesome conference!
 
+////
 .Future
 
-*August 22-23 2009*::
-	The Lumiera Team will meet at http://froscon.org/[FrOSCon]. We will have a small information Booth there, hiring developers, and hack a bit in our back room.
+////
