--- a/news.txt
+++ b/news.txt
@@ -2,6 +2,17 @@
 Please add new items on the top, comment older/irrelevant items out
 ////
 
+*September 4 2009*::
+	A new http://unix.freshmeat.net/projects/nobug[release] of http://lumiera.org/nobug_manual.html[NoBug],
+ 	our debugging library is out. Lumiera needs this new version from now on. We are on the track for a
+	production release really soon. Some help for testing and improving the documentation is still needed.
+
+*September 3 2009*::
+	Mario from http://www.lxde.org/[LXDE] talked with us at FrSOCon. This interview is now online
+	at http://www.perspektive89.com/2009/lumiera_radio_interview_during_froscon_2009[perspective89] and
+        http://blog.radiotux.de/2009/09/02/interview-ueber-lumiera/[radiotux]. Thanks to Mario and the radiotux team
+	who made this happen.
+
 *August 22-23 2009*::
 	http://froscon.org/[FrOSCon] was a big success, a lot of people where interested in Lumiera! We will show videos, photos and stuff soon.
 
