--- a/news.txt
+++ b/news.txt
@@ -2,12 +2,12 @@
 Please add new items on the top, comment older/irrelevant items out
 ////
 *December 26 2009*::
-	The (German) link:DevReport-09-12.html[Winter Quarterly News] are out!
+	The (German) link:DevReport-09-12.html[Winter Quarterly News] are out! Read the last development report.
 *December 12 2009*::
 	You probably haven't noticed that, but a lot of work has been done to improve this website. In fact the development of uWiki has proceeded as far as making this self extensible minimalistic wiki engine actually working, today for the first time. After a time for testing and debugging it will eventually be set up for the Lumiera website. You can http://uwiki.pipapo.org/_uwiki/form/account_create.html[have a look at it], but be aware that currently new users are not  automatically allowed to edit. 
 
 *September 5 2009*::
-	The page about our link:FrOSCon09/froscon09.html[FrOSCon] appearance is now online, still a bit prelimary
+	The page about our link:froscon09.html[FrOSCon] appearance is now online, still a bit prelimary
         we work on it.
 
 *September 4 2009*::
