--- a/news.txt
+++ b/news.txt
@@ -2,8 +2,8 @@
 Please add new items on the top, comment older/irrelevant items out
 ////
 *January 10 2010*::
-	NoBug version 201001.1 has just been released. This new versions, with lots of improvements (also the support for non-Linux systems) is now a requirement for Lumiera. On the release there are still some pending bugs meant to be shot down in the next few days (just now the testsuite fails). +
-CALL FOR TESTERS - We are looking for people using MacOS, BSD, OpenSolaris or any other variant of a Unix-ish OS (Posix systems for Windows, Cygwin, SFU, ...) available for a short test session over IRC. Volunteers, install _gcc_, _git_, _valgrind_ (if supported) and contact _cehteh_ at #lumiera on Freenode.
+	http://lumiera.org/nobug_manual.html[NoBug] http://unix.freshmeat.net/projects/nobug[version 201001.1] has just been released. This new versions, with lots of improvements (also the support for non-Linux systems) is now a requirement for Lumiera. On the release there are still some pending bugs meant to be shot down in the next few days (just now the testsuite fails). +
+_CALL FOR TESTERS_ - We are looking for people using MacOS, BSD, OpenSolaris or any other variant of a Unix-ish OS (Posix systems for Windows, Cygwin, SFU, ...) available for a short test session over IRC. Volunteers, install _gcc_, _git_, _valgrind_ (if supported) and contact _cehteh_ at #lumiera on Freenode.
 *December 26 2009*::
 	The (German) link:DevReport-09-12.html[Winter Quarterly News] are out! Read the last development report.
 *December 12 2009*::
