--- a/news.txt
+++ b/news.txt
@@ -1,6 +1,11 @@
 ////
 Please add new items on the top, comment older/irrelevant items out
 ////
+
+*July 30 2010*::
+	The link:DevReport-10-07.html[Summer Quarterly News] are out! Read the
+        last development report.
+
 *July 29 2010*::
 	The Lumiera team will be at the German _Free and Open Source Software 
 	Conference_ (http://froscon.org/[FrOSCon]) in St. Augustin (near Bonn)
