Wrote download page, edited homepage and made some adjustments (still) to todo and quickstart
Primary changes were to download.txt which is scratch written to explain the code status and provide to the
proper links to newbies-tutorial and the appropriate code sources. Tried to maintain a proactive tone.

Tweaked the homepage to be a bit more like the current, made some edits to existing content.

Updated todo to reflect changes in download.txt

--- a/todo.txt
+++ b/todo.txt
@@ -15,7 +15,7 @@ The notes here are to keep track of ideas, check for further notes/ideas on the 
    a general news-feed (likely at bottom) a 'graphic presence' 
    and until complete: info about working on the site
 
-* download.txt *Open*
+* download.txt *Pending*
 ** Because their is little for anyone other than developers to work with, 
    this page should contain a brief but friendly explanation of project status, 
    and link to appropriate git, and compiling info
